Changes security API

--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -36,6 +36,36 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
+    # ========================================
+    # BLOQUEAR ARCHIVOS SENSIBLES (HTTP)
+    # ========================================
+    # Bloquear acceso a archivos de configuración
+    location ~ /\.(env|git|config) {
+        deny all;
+        access_log /var/log/nginx/blocked_sensitive_http.log;
+        return 404;
+    }
+
+    # Bloquear archivos de metadatos y configuración
+    location ~ \.(json|md|yml|yaml)$ {
+        deny all;
+        access_log /var/log/nginx/blocked_metadata_http.log;
+        return 404;
+    }
+
+    # Bloquear directorios sensibles
+    location ~ ^/(node_modules|src|config|scripts|docker|logs|ssl)/ {
+        deny all;
+        access_log /var/log/nginx/blocked_directories_http.log;
+        return 404;
+    }
+
+    # Bloquear archivos de respaldo y temporales
+    location ~ \.(bak|backup|tmp|temp|log|cache)$ {
+        deny all;
+        return 404;
+    }
+
     # Health check para ALB - con CORS para navegadores
     location = /health {
         # Headers CORS para todas las respuestas
@@ -232,6 +262,36 @@ server {
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     
+    # ========================================
+    # BLOQUEAR ARCHIVOS SENSIBLES
+    # ========================================
+    # Bloquear acceso a archivos de configuración
+    location ~ /\.(env|git|config) {
+        deny all;
+        access_log /var/log/nginx/blocked_sensitive.log;
+        return 404;
+    }
+
+    # Bloquear archivos de metadatos y configuración
+    location ~ \.(json|md|yml|yaml)$ {
+        deny all;
+        access_log /var/log/nginx/blocked_metadata.log;
+        return 404;
+    }
+
+    # Bloquear directorios sensibles
+    location ~ ^/(node_modules|src|config|scripts|docker|logs|ssl)/ {
+        deny all;
+        access_log /var/log/nginx/blocked_directories.log;
+        return 404;
+    }
+
+    # Bloquear archivos de respaldo y temporales
+    location ~ \.(bak|backup|tmp|temp|log|cache)$ {
+        deny all;
+        return 404;
+    }
+
     # Ocultar versión de nginx
     server_tokens off;
 
