--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
+    "@aws-sdk/client-s3": "^3.839.0",
+    "@aws-sdk/client-sts": "^3.839.0",
+    "@aws-sdk/lib-dynamodb": "^3.820.0",
+    "@aws-sdk/lib-storage": "^3.839.0",
+    "@aws-sdk/s3-request-presigner": "^3.839.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
