Changes nginx package.json

--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -46,6 +46,34 @@ server {
         return 404;
     }
 
+    # Permitir swagger.json específicamente
+    location = /swagger.json {
+        # Headers CORS
+        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+
+        proxy_pass http://artesa_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Permitir acceso público a la documentación Swagger
+    location /public/ {
+        # Headers CORS
+        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Credentials "true" always;
+        
+        proxy_pass http://artesa_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Bloquear archivos de metadatos y configuración
     location ~ \.(json|md|yml|yaml)$ {
         deny all;
