Changes Docker CORS

--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -7,6 +7,7 @@ upstream artesa_app {
 # Mapa para CORS dinámico - Orígenes permitidos (más permisivo)
 map $http_origin $cors_origin {
     default "https://d1bqegutwmfn98.cloudfront.net";
+    "~^https://ec2-44-216-131-63\.compute-1\.amazonaws\.com.*" "https://ec2-44-216-131-63.compute-1.amazonaws.com";
     "~^https://d1bqegutwmfn98\.cloudfront\.net$" "https://d1bqegutwmfn98.cloudfront.net";
     "~^http://localhost.*" "http://localhost:3000";
     "~^https://localhost.*" "https://localhost:3000";
@@ -14,6 +15,7 @@ map $http_origin $cors_origin {
 
 map $cors_origin $cors_cred {
     "https://d1bqegutwmfn98.cloudfront.net" "true";
+    "https://ec2-44-216-131-63.compute-1.amazonaws.com" "true";
     default "true";
 }
 
