Chenges Dockers CORS

--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -5,17 +5,16 @@ upstream artesa_app {
 }
 
 # Mapa para CORS dinámico - Orígenes permitidos (más permisivo)
+# Mapa para CORS dinámico - simplificado
 map $http_origin $cors_origin {
     default "https://d1bqegutwmfn98.cloudfront.net";
-    "~^https://ec2-44-216-131-63\.compute-1\.amazonaws\.com.*" "https://ec2-44-216-131-63.compute-1.amazonaws.com";
-    "~^https://d1bqegutwmfn98\.cloudfront\.net$" "https://d1bqegutwmfn98.cloudfront.net";
-    "~^http://localhost.*" "http://localhost:3000";
-    "~^https://localhost.*" "https://localhost:3000";
+    "~*^https://ec2-44-216-131-63\.compute-1\.amazonaws\.com" "https://ec2-44-216-131-63.compute-1.amazonaws.com";
+    "~*^https://d1bqegutwmfn98\.cloudfront\.net" "https://d1bqegutwmfn98.cloudfront.net";
+    "~*^http://localhost" "http://localhost:3000";
+    "~*^https://localhost" "https://localhost:3000";
 }
 
 map $cors_origin $cors_cred {
-    "https://d1bqegutwmfn98.cloudfront.net" "true";
-    "https://ec2-44-216-131-63.compute-1.amazonaws.com" "true";
     default "true";
 }
 
