--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -26,6 +26,8 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
+    map_hash_bucket_size 128;
+    map_hash_max_size 2048;
     client_max_body_size 50M;
 
     # Compresión Gzip
