--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -141,19 +141,17 @@ server {
     # Rutas de API con CORS completo
     location /api/ {
         # Headers CORS para todas las respuestas
-        # Headers CORS para todas las respuestas
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-        add_header Access-Control-Allow-Credentials "true" always;
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
 
         # Manejar preflight OPTIONS
         if ($request_method = 'OPTIONS') {
-            # Headers CORS para todas las respuestas
-            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-            add_header Access-Control-Allow-Credentials "true" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+            add_header Access-Control-Allow-Origin $cors_origin always;
+            add_header Access-Control-Allow-Credentials $cors_cred always;
+            add_header Access-Control-Allow-Headers $cors_headers always;
+            add_header Access-Control-Allow-Methods $cors_methods always;
             add_header Access-Control-Max-Age 86400 always;
             add_header Content-Type "text/plain charset=UTF-8" always;
             add_header Content-Length 0 always;
@@ -331,17 +329,17 @@ server {
     # Health check para ALB - con CORS para navegadores
     location = /health {
         # Headers CORS para todas las respuestas
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-        add_header Access-Control-Allow-Credentials "true" always;
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
 
         # Manejar preflight OPTIONS
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-            add_header Access-Control-Allow-Credentials "true" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+            add_header Access-Control-Allow-Origin $cors_origin always;
+            add_header Access-Control-Allow-Credentials $cors_cred always;
+            add_header Access-Control-Allow-Headers $cors_headers always;
+            add_header Access-Control-Allow-Methods $cors_methods always;
             add_header Access-Control-Max-Age 86400 always;
             add_header Content-Type "text/plain charset=UTF-8" always;
             add_header Content-Length 0 always;
