--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -8,7 +8,6 @@ upstream artesa_app {
 # Mapa para CORS dinámico - simplificado
 map $http_origin $cors_origin {
     default "https://d1bqegutwmfn98.cloudfront.net";
-    "~*^https://ec2-44-216-131-63\.compute-1\.amazonaws\.com" "https://ec2-44-216-131-63.compute-1.amazonaws.com";
     "~*^https://d1bqegutwmfn98\.cloudfront\.net" "https://d1bqegutwmfn98.cloudfront.net";
     "~*^http://localhost" "http://localhost:3000";
     "~*^https://localhost" "https://localhost:3000";
@@ -50,7 +49,7 @@ server {
     # Permitir swagger.json específicamente
     location = /swagger.json {
         # Headers CORS
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Credentials "true" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
@@ -65,7 +64,7 @@ server {
     # Permitir acceso público a la documentación Swagger
     location /public/ {
         # Headers CORS
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Credentials "true" always;
         
         proxy_pass http://artesa_app;
@@ -98,14 +97,14 @@ server {
     # Health check para ALB - con CORS para navegadores
     location = /health {
         # Headers CORS para todas las respuestas
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Credentials "true" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
 
         # Manejar preflight OPTIONS
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+            add_header Access-Control-Allow-Origin $cors_origin always;
             add_header Access-Control-Allow-Credentials "true" always;
             add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
@@ -126,7 +125,7 @@ server {
     location = /api/health {
         # Headers CORS
         # Headers CORS para todas las respuestas
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Credentials "true" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
@@ -174,14 +173,14 @@ server {
     # Documentación Swagger (con y sin slash final)
     location ~ ^/api-docs/?$ {
         # Headers CORS para todas las respuestas
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Credentials "true" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
 
         # Manejar preflight OPTIONS
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+            add_header Access-Control-Allow-Origin $cors_origin always;
             add_header Access-Control-Allow-Credentials "true" always;
             add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
@@ -205,7 +204,7 @@ server {
     # Swagger JSON específico
     location /swagger.json {
         # Headers CORS
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Credentials "true" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
@@ -233,7 +232,7 @@ server {
     location / {
         # Headers CORS
         # Headers CORS para todas las respuestas
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Credentials "true" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
@@ -241,7 +240,7 @@ server {
         # Manejar preflight OPTIONS
         if ($request_method = 'OPTIONS') {
             # Headers CORS para todas las respuestas
-            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+            add_header Access-Control-Allow-Origin $cors_origin always;
             add_header Access-Control-Allow-Credentials "true" always;
             add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
@@ -407,14 +406,14 @@ server {
     # Documentación Swagger con CORS completo
     location ~ ^/api-docs/?$ {
         # Headers CORS para todas las respuestas
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Credentials "true" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
 
         # Manejar preflight OPTIONS
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+            add_header Access-Control-Allow-Origin $cors_origin always;
             add_header Access-Control-Allow-Credentials "true" always;
             add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
@@ -438,7 +437,7 @@ server {
     # Swagger JSON específico
     location /swagger.json {
         # Headers CORS
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Credentials "true" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
