--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -4,6 +4,20 @@ upstream artesa_app {
     keepalive 32;
 }
 
+# Variables para CORS dinámico
+map $http_origin $cors_origin {
+    default "";
+    "~^https://d1bqegutwmfn98\.cloudfront\.net$" "https://d1bqegutwmfn98.cloudfront.net";
+    "~^https://.*\.cloudfront\.net$" $http_origin;
+    "~^http://localhost:3000$" "http://localhost:3000";
+    "~^http://localhost:5173$" "http://localhost:5173";
+}
+
+map $cors_origin $cors_cred {
+    default "";
+    "~.+" "true";
+}
+
 # ========================================
 # SERVIDOR HTTP (Puerto 80)
 # ========================================
@@ -76,8 +90,8 @@ server {
     # Health check para ALB - con CORS para navegadores
     location = /health {
         # Headers CORS para todas las respuestas
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
 
@@ -103,8 +117,8 @@ server {
     # Health check adicional para la aplicación
     location = /api/health {
         # Headers CORS para todas las respuestas
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
 
@@ -117,16 +131,17 @@ server {
 
     # Rutas de API con CORS completo
     location /api/ {
-        # Headers CORS para todas las respuestas
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-        add_header Access-Control-Allow-Credentials "true" always;
+        # Headers CORS dinámicos
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+        add_header Access-Control-Max-Age 86400 always;
 
-        # Manejar preflight OPTIONS
+        # Manejar preflight OPTIONS  
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Allow-Origin $cors_origin always;
+            add_header Access-Control-Allow-Credentials $cors_cred always;
             add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
             add_header Access-Control-Max-Age 86400 always;
@@ -345,16 +360,17 @@ server {
 
     # Rutas de API con CORS completo
     location /api/ {
-        # Headers CORS para todas las respuestas
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-        add_header Access-Control-Allow-Credentials "true" always;
+        # Headers CORS dinámicos
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+        add_header Access-Control-Max-Age 86400 always;
 
-        # Manejar preflight OPTIONS
+        # Manejar preflight OPTIONS  
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Allow-Origin $cors_origin always;
+            add_header Access-Control-Allow-Credentials $cors_cred always;
             add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
             add_header Access-Control-Max-Age 86400 always;
@@ -366,13 +382,10 @@ server {
         # Proxy a la aplicación
         proxy_pass http://artesa_app;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;   
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
