--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -42,8 +42,13 @@ server {
 
     # Bloquear archivos de metadatos y configuración
     location ~ \.(json|md|yml|yaml)$ {
-        # Excepción para swagger.json
-        if ($uri = "/swagger.json") {
+        # Excepción para swagger.json y archivos API específicos
+        if ($uri ~ "^/(swagger\.json|api-docs\.json)$") {
+            proxy_pass http://artesa_app;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             break;
         }
         deny all;
@@ -91,6 +96,27 @@ server {
 
         proxy_pass http://artesa_app;
         proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        client_max_body_size 50M;
+    }
+
+    # WebSocket y conexiones upgrade
+    location /socket.io/ {
+        # Headers CORS dinámicos
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+        add_header Access-Control-Max-Age 86400 always;
+
+        proxy_pass http://artesa_app;
+        proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
@@ -100,18 +126,6 @@ server {
         proxy_cache_bypass $http_upgrade;
         client_max_body_size 50M;
     }
-}
-            add_header Content-Length 0 always;
-            return 204;
-        }
-
-        proxy_pass http://artesa_app/api/health/simple;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
     # Health check API
     location = /api/health {
         # Headers CORS dinámicos
@@ -289,8 +303,8 @@ server {
     server_name ec2-44-216-131-63.compute-1.amazonaws.com;
 
     # Configuración SSL
-    ssl_certificate /etc/nginx/ssl/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/key.pem;
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
     
     # Configuración SSL mejorada
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -372,7 +386,7 @@ server {
             return 204;
         }
 
-        proxy_pass http://artesa_app/api/health/simple;
+        proxy_pass http://artesa_app;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -531,3 +545,43 @@ server {
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
             add_header Access-Control-Max-Age 86400 always;
             add_header Content-Type "text/plain charset=UTF-8" always;
+            add_header Content-Length 0 always;
+            return 204;
+        }
+
+        proxy_pass http://artesa_app;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        client_max_body_size 50M;
+    }
+
+    # WebSocket y conexiones upgrade (HTTPS)
+    location /socket.io/ {
+        # Headers CORS dinámicos
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+        add_header Access-Control-Max-Age 86400 always;
+
+        proxy_pass http://artesa_app;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        client_max_body_size 50M;
+    }
+}
