--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -19,6 +19,9 @@ map $cors_origin $cors_cred {
     default "true";
 }
 
+ # Resolver para Docker
+resolver 127.0.0.11 valid=30s;
+
 # ========================================
 # SERVIDOR HTTP (Puerto 80)
 # ========================================
@@ -42,13 +45,9 @@ server {
 
     # Bloquear archivos de metadatos y configuración
     location ~ \.(json|md|yml|yaml)$ {
-        # Excepción para swagger.json y archivos API específicos
-        if ($uri ~ "^/(swagger\.json|api-docs\.json)$") {
+        # Excepción para swagger.json
+        if ($uri = "/swagger.json") {
             proxy_pass http://artesa_app;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
             break;
         }
         deny all;
@@ -126,6 +125,7 @@ server {
         proxy_cache_bypass $http_upgrade;
         client_max_body_size 50M;
     }
+
     # Health check API
     location = /api/health {
         # Headers CORS dinámicos
@@ -293,6 +293,7 @@ server {
         proxy_read_timeout 60s;
         client_max_body_size 50M;
     }
+        
 }
 
 # ========================================
@@ -569,7 +570,7 @@ server {
         # Headers CORS dinámicos
         add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Credentials $cors_cred always;
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;  
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
         add_header Access-Control-Max-Age 86400 always;
 
