--- a/src/views/frontend/LoginArtesa/package.json
+++ b/src/views/frontend/LoginArtesa/package.json
@@ -3,24 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-   "scripts": {
+  "scripts": {
     "dev": "vite",
     "dev:staging": "vite --mode staging",
     "dev:host": "vite --host",
     "dev:ngrok": "vite --mode ngrok --host",
     "dev:ngrok-env": "vite --mode ngrok --config vite.config.ngrok.js --env-file .env.ngrok",
-    
     "build": "vite build",
     "build:staging": "vite build --mode staging",
     "build:production": "vite build --mode production",
     "build:ngrok": "vite build --mode ngrok",
-    
     "preview": "vite preview",
     "preview:staging": "vite preview --mode staging",
-    
     "deploy:staging": "npm run build:staging && aws s3 sync dist/ s3://artesa-frontend-staging --delete",
     "deploy:production": "npm run build:production && aws s3 sync dist/ s3://tu-bucket-production --delete",
-    
     "test:staging": "npm run build:staging && npm run preview:staging"
   },
   "dependencies": {
@@ -42,6 +38,7 @@
     "tailwind-scrollbar": "^4.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.3.4",
