--- a/src/views/frontend/LoginArtesa/package.json
+++ b/src/views/frontend/LoginArtesa/package.json
@@ -3,27 +3,25 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-   "scripts": {
+  "scripts": {
     "dev": "vite",
     "dev:staging": "vite --mode staging",
     "dev:host": "vite --host",
     "dev:ngrok": "vite --mode ngrok --host",
     "dev:ngrok-env": "vite --mode ngrok --config vite.config.ngrok.js --env-file .env.ngrok",
-    
     "build": "vite build",
     "build:staging": "vite build --mode staging",
     "build:production": "vite build --mode production",
     "build:ngrok": "vite build --mode ngrok",
-    
     "preview": "vite preview",
     "preview:staging": "vite preview --mode staging",
-    
     "deploy:staging": "npm run build:staging && aws s3 sync dist/ s3://artesa-frontend-staging --delete",
     "deploy:production": "npm run build:production && aws s3 sync dist/ s3://tu-bucket-production --delete",
-    
     "test:staging": "npm run build:staging && npm run preview:staging"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.12",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.7.9",
@@ -32,16 +30,20 @@
     "framer-motion": "^12.6.3",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
-    "react-datepicker": "^8.2.1",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
-    "react-google-recaptcha-v3": "^1.10.1",
-    "react-icons": "^5.4.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.59.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-select": "^5.10.1",
     "recharts": "^2.15.1",
-    "tailwind-scrollbar": "^4.0.1"
+    "tailwind-scrollbar": "^4.0.1",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.3.4",
