--- a/src/views/frontend/LoginArtesa/package.json
+++ b/src/views/frontend/LoginArtesa/package.json
@@ -20,6 +20,7 @@
     "test:staging": "npm run build:staging && npm run preview:staging"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.12",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.7.9",
