--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -19,7 +19,7 @@ WORKDIR /app
 # Copiar archivos de dependencias primero (para cache de Docker)
 COPY package*.json ./
 # Instalar dependencias (incluyendo AWS SDK V3)
-RUN npm ci --only=production
+RUN npm ci --only=production --no-optional
 
 # Crear directorios antes de cambiar de usuario
 RUN mkdir -p uploads tmp logs && \
