--- a/src/views/frontend/LoginArtesa/package.json
+++ b/src/views/frontend/LoginArtesa/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "jwt-decode": "^4.0.0",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
