--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -103,6 +103,10 @@ server {
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
         client_max_body_size 50M;
+        # Configuración específica para multipart/form-data
+        proxy_request_buffering off;
+        proxy_buffering off;
+        proxy_max_temp_file_size 0;
     }
 
     # WebSocket y conexiones upgrade
@@ -124,6 +128,10 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         client_max_body_size 50M;
+        # Configuración específica para multipart/form-data
+        proxy_request_buffering off;
+        proxy_buffering off;
+        proxy_max_temp_file_size 0;
     }
 
     # Health check API
@@ -186,6 +194,10 @@ server {
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
         client_max_body_size 50M;
+        # Configuración específica para multipart/form-data
+        proxy_request_buffering off;
+        proxy_buffering off;
+        proxy_max_temp_file_size 0;
     }
 
     # Documentación Swagger
@@ -292,6 +304,10 @@ server {
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
         client_max_body_size 50M;
+        # Configuración específica para multipart/form-data
+        proxy_request_buffering off;
+        proxy_buffering off;
+        proxy_max_temp_file_size 0;
     }
         
 }
@@ -454,6 +470,10 @@ server {
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
         client_max_body_size 50M;
+        # Configuración específica para multipart/form-data
+        proxy_request_buffering off;
+        proxy_buffering off;
+        proxy_max_temp_file_size 0;
     }
 
     # Documentación Swagger
@@ -563,6 +583,10 @@ server {
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
         client_max_body_size 50M;
+        # Configuración específica para multipart/form-data
+        proxy_request_buffering off;
+        proxy_buffering off;
+        proxy_max_temp_file_size 0;
     }
 
     # WebSocket y conexiones upgrade (HTTPS)
@@ -584,5 +608,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         client_max_body_size 50M;
+        # Configuración específica para multipart/form-data
+        proxy_request_buffering off;
+        proxy_buffering off;
+        proxy_max_temp_file_size 0;
     }
 }
