--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -3,6 +3,9 @@ services:
     build:
       context: .
       dockerfile: docker/app/Dockerfile
+      args:
+        - BUILDKIT_INLINE_CACHE=1
+      shm_size: '2gb'
     container_name: artesa-api-staging
     restart: unless-stopped
     environment:
