--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -273,6 +273,15 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
+    # Imágenes estáticas de productos
+    location /product-images/ {
+        alias /app/public/product-images/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+        add_header Access-Control-Allow-Origin "*" always;
+        try_files $uri $uri/ =404;
+    }
+
     # Todas las demás rutas
     location / {
         # Headers CORS dinámicos
@@ -309,7 +318,7 @@ server {
         proxy_buffering off;
         proxy_max_temp_file_size 0;
     }
-        
+
 }
 
 # ========================================
@@ -547,6 +556,15 @@ server {
         proxy_set_header Host $host;
         expires 1y;
         add_header Cache-Control "public, immutable";
+    }
+
+    # Imágenes estáticas de productos
+    location /product-images/ {
+        alias /app/public/product-images/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+        add_header Access-Control-Allow-Origin "*" always;
+        try_files $uri $uri/ =404;
     }
 
     # Todas las demás rutas
